--- a/index.html
+++ b/index.html
@@ -1471,15 +1471,44 @@
                                 카카오톡 브라우저에서는 PDF를 볼 수 없습니다.<br>
                                 아래 버튼을 눌러 외부 브라우저에서 열어주세요.
                             </p>
-                            <a href="${report.data}" download="${report.filename}" 
-                               style="display: inline-block; padding: 15px 30px; background: #667eea; color: white; 
-                                      text-decoration: none; border-radius: 8px; font-weight: bold; font-size: 16px;">
-                                📥 PDF 다운로드 / 외부에서 열기
-                            </a>
+                            <button onclick="openPDFInNewWindow(${index})" 
+                               style="display: block; width: 100%; max-width: 300px; margin: 0 auto 15px; padding: 15px 30px; 
+                                      background: #667eea; color: white; border: none; border-radius: 8px; 
+                                      font-weight: bold; font-size: 16px; cursor: pointer;">
+                                🌐 새 창에서 PDF 열기
+                            </button>
+                            <p style="font-size: 13px; color: #999; margin-top: 20px;">
+                                * 버튼을 누른 후 '다른 앱에서 열기' 또는 '브라우저에서 열기'를 선택하세요
+                            </p>
+                        </div>
+                    `;
+                    document.getElementById('zoomControls').style.display = 'none';
+                } else if (isMobileDevice()) {
+                    // 일반 모바일 브라우저에서도 새 창 옵션 제공
+                    content.innerHTML = `
+                        <div style="text-align: center; color: white; padding: 40px 20px;">
+                            <div style="font-size: 60px; margin-bottom: 20px;">📄</div>
+                            <h3 style="margin-bottom: 20px;">${report.title}</h3>
+                            <p style="margin-bottom: 30px; line-height: 1.6;">
+                                PDF를 보려면 아래 옵션 중 하나를 선택하세요
+                            </p>
+                            <button onclick="openPDFInNewWindow(${index})" 
+                               style="display: block; width: 100%; max-width: 300px; margin: 0 auto 15px; padding: 15px 30px; 
+                                      background: #667eea; color: white; border: none; border-radius: 8px; 
+                                      font-weight: bold; font-size: 16px; cursor: pointer;">
+                                🌐 새 창에서 열기
+                            </button>
+                            <button onclick="viewPDFInline(${index})" 
+                               style="display: block; width: 100%; max-width: 300px; margin: 0 auto; padding: 15px 30px; 
+                                      background: #28a745; color: white; border: none; border-radius: 8px; 
+                                      font-weight: bold; font-size: 16px; cursor: pointer;">
+                                📱 현재 창에서 보기
+                            </button>
                         </div>
                     `;
                     document.getElementById('zoomControls').style.display = 'none';
                 } else {
+                    // 데스크톱에서는 기존처럼 iframe으로 표시
                     content.innerHTML = `<iframe src="${report.data}" style="width: 90vw; height: 80vh; border: none;"></iframe>`;
                     document.getElementById('zoomControls').style.display = 'none';
                 }
@@ -1589,6 +1618,57 @@
                 `);
                 newWindow.document.close();
             }
+        }
+
+        function openPDFInNewWindow(index) {
+            const report = reports[index];
+            if (!report || report.type !== 'application/pdf') return;
+
+            // PDF를 새 창에서 열기
+            const newWindow = window.open('', '_blank');
+            if (newWindow) {
+                newWindow.document.write(`
+                    <!DOCTYPE html>
+                    <html>
+                    <head>
+                        <meta charset="UTF-8">
+                        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                        <title>${report.title}</title>
+                        <style>
+                            * {
+                                margin: 0;
+                                padding: 0;
+                                box-sizing: border-box;
+                            }
+                            html, body {
+                                width: 100%;
+                                height: 100%;
+                                overflow: hidden;
+                            }
+                            iframe {
+                                width: 100%;
+                                height: 100%;
+                                border: none;
+                            }
+                        </style>
+                    </head>
+                    <body>
+                        <iframe src="${report.data}" type="application/pdf"></iframe>
+                    </body>
+                    </html>
+                `);
+                newWindow.document.close();
+            } else {
+                alert('팝업이 차단되었습니다. 브라우저 설정에서 팝업을 허용해주세요.');
+            }
+        }
+
+        function viewPDFInline(index) {
+            const report = reports[index];
+            if (!report || report.type !== 'application/pdf') return;
+
+            const content = document.getElementById('fullscreenContent');
+            content.innerHTML = `<iframe src="${report.data}" style="width: 90vw; height: 80vh; border: none;"></iframe>`;
         }
 
         function closeFullscreen() {
