--- a/index.html
+++ b/index.html
@@ -1224,14 +1224,13 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1><i class="fa-solid fa-tower-broadcast"></i>긴급구조 e-리포트</h1>
-            <p>누구나 실시간으로 자료 확인 가능</p>
-            <div class="cloud-badge">☁️ Firebase Realtime Database</div>
-            
-            <!-- Connection status -->
-            <div class="connection-status" id="connectionStatus">
-                <i class="fa-solid fa-circle-notch fa-spin"></i> 연결 중...
-            </div>
+            <h1><i class="fa-solid fa-clipboard-list"></i>긴급구조 e-리포트</h1>
+            <div class="cloud-badge">
+  ☁️ Firebase Realtime Database
+  <span class="connection-status" id="connectionStatus">
+    <i class="fa-solid fa-circle-notch fa-spin"></i> 연결 중...
+  </span>
+</div>
             
             <!-- 헤더 오른쪽 상단 로그인 현황 -->
             <div class="header-login-status" id="headerLoginStatus">
