--- a/index.html
+++ b/index.html
@@ -1925,7 +1925,7 @@
                         
                         const newReportCount = newReports.filter(function(r) { return r; }).length;
                         if (lastReportCount > 0 && newReportCount > lastReportCount) {
-                            playNotificationSound();
+                            playUploadAlert();
                         }
                         lastReportCount = newReportCount;
                         
